# verifiable-storage

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  docker-compose.fs.yml  docker-compose.yml  nginx.conf
.github/workflows/: ci.yml
crates/common/: Cargo.toml
crates/common/src/: file_utils.rs  lib.rs  utils.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/merkle-tree/: Cargo.toml
crates/merkle-tree/src/: lib.rs  proof.rs
crates/storage/: Cargo.toml
crates/storage/src/: backend.rs  database.rs  filesystem.rs  lib.rs
crates/storage/src/database/: queries.rs  schema.rs
crates/storage/src/filesystem/: metadata.rs
docs/: architecture.md  new-features-slides.md
scripts/: create_test_files.sh  run_e2e_tests.sh  test_rate_limiting.sh
tests/e2e/: Cargo.toml
tests/e2e/src/: database_validator.rs  filesystem_validator.rs  main.rs  test_utils.rs
