[workspace]
members = [
    "crates/merkle-tree",
    "crates/crypto",
    "crates/common",
    "crates/storage",
    "bin/client",
    "bin/server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
base64 = "0.21"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
rand = "0.8"

