[package]
name = "crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek.workspace = true
sha2.workspace = true
hex.workspace = true
anyhow.workspace = true
rand.workspace = true
aes-gcm = { workspace = true }
hkdf = { workspace = true }
generic-array = { workspace = true }


