[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
async-trait = "0.1"
merkle-tree = { path = "../merkle-tree" }

# Filesystem storage dependencies
tokio = { workspace = true, features = ["fs", "io-util"] }
fs2 = "0.4"

# Database storage (PostgreSQL only)
[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio-native-tls", "postgres"]

[dependencies.tracing]
workspace = true

